# DPO

./: .gitignore  README.md  env_setup.sh  pyproject.toml  requirementx.txt
data/models/2024-10-02T1713_judge_fn_600.pt/: config.json
data/models/2024-10-11T1346.pt/: config.json
data/models/2024-12-01T1954.pt/: config.json
data/pair_data/: 2024-10-04T1549.pkl  2024-10-04T1758.pkl
dpo/: dpo.py  dpo_toy.py  imdb_dpo.py  sentiment_judge.py  supervised_fine_tune.py  utils.py
